# nils-alfredworkflow

./: .editorconfig  .envrc  .gitignore  .rumdl.toml  AGENT_DOCS.toml  ALFRED_WORKFLOW_DEVELOPMENT.md  BINARY_DEPENDENCIES.md  Cargo.toml  DEVELOPMENT.md  README.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  deny.toml  package-lock.json  package.json
crates/bangumi-cli/: Cargo.toml  README.md
crates/bangumi-cli/docs/: README.md  playwright-bridge-design.md  workflow-contract.md
crates/bangumi-cli/src/: bangumi_api.rs  config.rs  feedback.rs  image_cache.rs  input.rs  lib.rs  main.rs  scraper_bridge.rs
crates/bangumi-cli/tests/: cli_contract.rs  integration.rs  live_api.rs
crates/bangumi-cli/tests/integration/: cli_contract.rs  live_api.rs
crates/bilibili-cli/: Cargo.toml  README.md
crates/bilibili-cli/docs/: README.md  workflow-contract.md
crates/bilibili-cli/src/: bilibili_api.rs  config.rs  feedback.rs  lib.rs  main.rs
crates/bilibili-cli/tests/: cli_contract.rs
crates/bilibili-cli/tests/integration/: cli_contract.rs
crates/brave-cli/: Cargo.toml  README.md
crates/brave-cli/docs/: README.md  workflow-contract.md
crates/brave-cli/src/: brave_api.rs  config.rs  feedback.rs  google_suggest.rs  lib.rs  main.rs  token.rs
crates/brave-cli/tests/: cli_contract.rs
crates/brave-cli/tests/integration/: cli_contract.rs
crates/cambridge-cli/: Cargo.toml  README.md
crates/cambridge-cli/docs/: README.md  workflow-contract.md
crates/cambridge-cli/src/: config.rs  feedback.rs  lib.rs  main.rs  scraper_bridge.rs  token.rs
crates/cambridge-cli/tests/: cli_contract.rs
crates/cambridge-cli/tests/integration/: cli_contract.rs
crates/epoch-cli/: Cargo.toml  README.md
crates/epoch-cli/docs/: README.md  workflow-contract.md
crates/epoch-cli/src/: clipboard.rs  convert.rs  error.rs  feedback.rs  lib.rs  main.rs  parser.rs
crates/epoch-cli/tests/: cli_contract.rs
crates/epoch-cli/tests/integration/: cli_contract.rs
crates/market-cli/: Cargo.toml  README.md
crates/market-cli/docs/: README.md  expression-rules.md  workflow-contract.md
crates/market-cli/src/: cache.rs  config.rs  error.rs  expression.rs  icons.rs  lib.rs  main.rs  model.rs  service.rs
crates/market-cli/src/providers/: coinbase.rs  frankfurter.rs  kraken.rs  mod.rs
crates/market-cli/tests/: cli_contract.rs
crates/market-cli/tests/integration/: cli_contract.rs
crates/quote-cli/: Cargo.toml  README.md
crates/quote-cli/docs/: README.md  workflow-contract.md
crates/quote-cli/src/: config.rs  feedback.rs  lib.rs  main.rs  refresh.rs  store.rs  zenquotes.rs
crates/quote-cli/tests/: cli_contract.rs
crates/quote-cli/tests/integration/: cli_contract.rs
crates/randomer-cli/: Cargo.toml  README.md
crates/randomer-cli/docs/: README.md  workflow-contract.md
crates/randomer-cli/src/: lib.rs  main.rs
crates/randomer-cli/tests/: cli_contract.rs  integration.rs
crates/randomer-cli/tests/integration/: cli_contract.rs
crates/spotify-cli/: Cargo.toml  README.md
crates/spotify-cli/docs/: README.md  workflow-contract.md
crates/spotify-cli/src/: config.rs  feedback.rs  lib.rs  main.rs  spotify_api.rs  spotify_auth.rs
crates/spotify-cli/tests/: cli_contract.rs  integration.rs
crates/spotify-cli/tests/integration/: cli_contract.rs
crates/timezone-cli/: Cargo.toml  README.md
crates/timezone-cli/docs/: README.md  workflow-contract.md
crates/timezone-cli/src/: convert.rs  error.rs  feedback.rs  lib.rs  local_tz.rs  main.rs  parser.rs
crates/timezone-cli/tests/: cli_contract.rs
crates/timezone-cli/tests/integration/: cli_contract.rs
crates/weather-cli/: Cargo.toml  README.md
crates/weather-cli/docs/: README.md  workflow-contract.md
crates/weather-cli/src/: batch_service.rs  cache.rs  config.rs  error.rs  geocoding.rs  hourly_service.rs  lib.rs  main.rs  model.rs  service.rs  weather_code.rs
crates/weather-cli/src/providers/: met_no.rs  mod.rs  open_meteo.rs
crates/weather-cli/tests/: cli_contract.rs
crates/weather-cli/tests/integration/: cli_contract.rs
crates/wiki-cli/: Cargo.toml  README.md
crates/wiki-cli/docs/: README.md  workflow-contract.md
crates/wiki-cli/src/: config.rs  feedback.rs  lib.rs  main.rs  wiki_api.rs
crates/wiki-cli/tests/: cli_contract.rs
crates/wiki-cli/tests/integration/: cli_contract.rs
crates/workflow-cli/: Cargo.toml  README.md
crates/workflow-cli/docs/: README.md  open-project-port-parity.md  workflow-contract.md
crates/workflow-cli/src/: main.rs
crates/workflow-cli/tests/: cli_contract.rs
crates/workflow-cli/tests/integration/: cli_contract.rs
crates/workflow-common/: Cargo.toml  README.md
crates/workflow-common/docs/: README.md
crates/workflow-common/src/: config.rs  discovery.rs  error.rs  feedback.rs  git.rs  lib.rs  list_parser.rs  output_contract.rs  usage_log.rs
crates/workflow-readme-cli/: Cargo.toml  README.md
crates/workflow-readme-cli/docs/: README.md
crates/workflow-readme-cli/src/: lib.rs  main.rs
crates/workflow-readme-cli/tests/: cli_contract.rs  codex_readme_fixtures.rs  image_assets.rs  integration.rs  table_downgrade.rs
crates/workflow-readme-cli/tests/fixtures/: codex-cli-readme.md
crates/workflow-readme-cli/tests/fixtures/expected/: codex-cli-readme-alfred.md
crates/workflow-readme-cli/tests/integration/: cli_contract.rs  image_assets.rs
crates/youtube-cli/: Cargo.toml  README.md
crates/youtube-cli/docs/: README.md  workflow-contract.md
crates/youtube-cli/src/: config.rs  feedback.rs  lib.rs  main.rs  youtube_api.rs
crates/youtube-cli/tests/: cli_contract.rs
crates/youtube-cli/tests/integration/: cli_contract.rs
docs/: ALFRED_WORKFLOW_MONOREPO_DESIGN.md  ARCHITECTURE.md  PACKAGING.md  RELEASE.md  WORKFLOW_GUIDE.md  cambridge-dict-contract.md  epoch-converter-contract.md  google-search-contract.md  market-cli-contract.md  market-expression-rules.md  memo-workflow-contract.md  multi-timezone-contract.md  open-project-port-parity.md  quote-workflow-contract.md  randomer-contract.md  spotify-search-contract.md  weather-cli-contract.md  (+2 more)
(+451 files in other folders)
