[workspace]
members = [
  "crates/alfred-core",
  "crates/alfred-plist",
  "crates/brave-cli",
  "crates/cambridge-cli",
  "crates/epoch-cli",
  "crates/spotify-cli",
  "crates/workflow-common",
  "crates/workflow-cli",
  "crates/wiki-cli",
  "crates/xtask",
  "crates/youtube-cli",
  "crates/randomer-cli",
  "crates/quote-cli",
]
resolver = "2"

[workspace.package]
# Keep new crates aligned with the workspace Rust edition.
edition = "2024"
license = "CC0-1.0"
version = "1.0.2"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3"
thiserror = "2"
toml = "0.8"
walkdir = "2"
