[workspace]
members = [
  "crates/alfred-core",
  "crates/alfred-plist",
  "crates/brave-cli",
  "crates/bilibili-cli",
  "crates/bangumi-cli",
  "crates/cambridge-cli",
  "crates/epoch-cli",
  "crates/google-cli",
  "crates/market-cli",
  "crates/timezone-cli",
  "crates/weather-cli",
  "crates/spotify-cli",
  "crates/steam-cli",
  "crates/workflow-common",
  "crates/workflow-cli",
  "crates/workflow-readme-cli",
  "crates/wiki-cli",
  "crates/youtube-cli",
  "crates/randomer-cli",
  "crates/quote-cli",
  "crates/memo-workflow-cli",
]
resolver = "2"

[workspace.package]
# Keep new crates aligned with the workspace Rust edition.
edition = "2024"
license = "CC0-1.0"
repository = "https://github.com/sympoies/nils-alfredworkflow"
version = "1.2.7"

[workspace.lints.clippy]
# Surface every `unwrap()` / `expect()` as a clippy warning so the
# unwrap-cleanup wave can attack one crate at a time. Per-crate cleanup
# PRs flip these to `deny` at the crate root via
# `#![deny(clippy::unwrap_used, clippy::expect_used)]` once that crate's
# production paths route failures through `?` + `NILS_<DOMAIN>_NNN`.
unwrap_used = "warn"
expect_used = "warn"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rust_decimal = { version = "1", features = ["serde"] }
tempfile = "3"
thiserror = "2"
toml = "0.8"
walkdir = "2"

[profile.dev]
# Faster dev/test link times: drop full DWARF (keep line tables so backtraces
# remain accurate) and leave debug info in .o files instead of packing a .dSYM
# on macOS. The link-heavy phase dominates dev-loop rebuild cost in this
# workspace; these two flags cut rebuild/link time with no effect on test
# semantics.
debug = "line-tables-only"
split-debuginfo = "unpacked"
