[package]
name = "nils-brave-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "brave_cli"
path = "src/lib.rs"

[[bin]]
name = "brave-cli"
path = "src/main.rs"

[dependencies]
alfred-core = { package = "nils-alfred-core", path = "../alfred-core", version = "1.0.3" }
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
