[package]
name = "cambridge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alfred-core = { path = "../alfred-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
