[package]
name = "nils-cambridge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cambridge Dictionary CLI for Alfred script-filter integration."

[lib]
name = "cambridge_cli"
path = "src/lib.rs"

[[bin]]
name = "cambridge-cli"
path = "src/main.rs"

[dependencies]
alfred-core = { package = "nils-alfred-core", path = "../alfred-core", version = "1.0.3" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
