[package]
name = "nils-epoch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Epoch and datetime conversion CLI for Alfred workflows."

[lib]
name = "epoch_cli"
path = "src/lib.rs"

[[bin]]
name = "epoch-cli"
path = "src/main.rs"

[dependencies]
alfred-core = { package = "nils-alfred-core", path = "../alfred-core", version = "1.0.3" }
chrono.workspace = true
clap.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
