[package]
name = "nils-market-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FX and crypto market data CLI with expression evaluation."

[lib]
name = "market_cli"
path = "src/lib.rs"

[[bin]]
name = "market-cli"
path = "src/main.rs"

[dependencies]
alfred-core = { package = "nils-alfred-core", path = "../alfred-core", version = "1.0.3" }
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
