[package]
name = "nils-quote-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quote feed CLI with refresh and query filtering."

[lib]
name = "quote_cli"
path = "src/lib.rs"

[[bin]]
name = "quote-cli"
path = "src/main.rs"

[dependencies]
alfred-core = { package = "nils-alfred-core", path = "../alfred-core", version = "1.0.3" }
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
