[package]
name = "nils-randomer-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
description = "Random value generation CLI with multiple output formats."

[lib]
name = "randomer_cli"
path = "src/lib.rs"

[[bin]]
name = "randomer-cli"
path = "src/main.rs"

[dependencies]
alfred-core = { package = "nils-alfred-core", path = "../alfred-core", version = "1.0.3" }
clap.workspace = true
rand = "0.9"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json.workspace = true
