[package]
name = "timezone-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alfred-core = { path = "../alfred-core" }
chrono.workspace = true
clap.workspace = true
thiserror.workspace = true
chrono-tz = "0.10"
iana-time-zone = "0.1"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
