[package]
name = "nils-timezone-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-timezone conversion CLI for current time queries."

[lib]
name = "timezone_cli"
path = "src/lib.rs"

[[bin]]
name = "timezone-cli"
path = "src/main.rs"

[dependencies]
alfred-core = { package = "nils-alfred-core", path = "../alfred-core", version = "1.0.3" }
workflow-common = { package = "nils-workflow-common", path = "../workflow-common", version = "1.0.3" }
chrono.workspace = true
clap.workspace = true
thiserror.workspace = true
chrono-tz = "0.10"
iana-time-zone = "0.1"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
