[package]
name = "nils-workflow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared workflow utility CLI for project discovery and actions."

[[bin]]
name = "workflow-cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
workflow-common = { package = "nils-workflow-common", path = "../workflow-common", version = "1.0.3" }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
