[package]
name = "nils-youtube-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "YouTube search CLI for video discovery workflows."

[lib]
name = "youtube_cli"
path = "src/lib.rs"

[[bin]]
name = "youtube-cli"
path = "src/main.rs"

[dependencies]
alfred-core = { package = "nils-alfred-core", path = "../alfred-core", version = "1.0.3" }
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
